--- a/src/stylesheets/components/Util/Code.module.sass
+++ b/src/stylesheets/components/Util/Code.module.sass
@@ -18,6 +18,7 @@
     color: $black
     cursor: pointer
     button
+    button
         border: none transparent // none is required for IE11 Support
     &:focus
         outline: 0
